fixed notifcation on reboot, added color for game is today

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="main_dark">#3A4A3D</color>
     <color name="secondery_bright">#F3EDE0</color>
     <color name="secobdery_dark">#D7FBE8</color>
+    <color name="alert">#E45826</color>
 </resources>
